--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body class="background-img">
     <nav class="navbar navbar-expand-lg navbar-light bg-light mt-0" id="navigation">
         <div class="container-fluid">
-            <a class="navbar-brand d-flex align-items-center" href="#">
+            <a class="navbar-brand d-flex align-items-center" href="">
                 <img src="./assets/unnamed.png" height="60" alt="" class="me-2">
                 <h4 class="me-2 text-center justify-self-center" id="BrandText">Elfida Turizm</h4>
             </a>
@@ -94,12 +94,12 @@
                 <div class="card">
                     <div class="card-body text-center row">
                         <div class="col-sm-6 col-md-6 col-xl-6">
-                            <a class="nav-link" href="https://www.facebook.com/mikatur.tatilbudur.5"><i class="fab fa-facebook-square fa-4x" style="color: #3b5998;"></i>
+                            <a class="nav-link" href="https://www.facebook.com/mikatur.tatilbudur.5" target="_blank"><i class="fab fa-facebook-square fa-4x" style="color: #3b5998;"></i>
                             <i class="fab" style="color: #3b5998;">Elfida Turizm</i></a>
 
                         </div>
                         <div class="col-sm-6 col-md-6 col-xl-6">
-                            <a class="nav-link" href="https://www.instagram.com/tatilbudurbursa/"><i class="fab fa-instagram fa-4x" style="color: #ac2bac;"></i>
+                            <a class="nav-link" href="https://www.instagram.com/tatilbudurbursa/" target="_blank"><i class="fab fa-instagram fa-4x" style="color: #ac2bac;"></i>
                                 <i class="fab" style="color: #ac2bac;">elfida.turizm</i></a>
                             
                         </div>
@@ -137,7 +137,7 @@
                                     <p class="fs-14 text-muted">TATİLBUDUR KONSEPT ACENTESİ 💥// KÜKÜRTLÜ CADDESİ
                                         Kükürtlü mah. Kükürtlü cad. Martı Apt. 14A Osmangazi, Bursa 16070
                                     </p>
-                                    <button type="button" class="btn btn-primary" onclick="window.location.href='https://maps.google.com/maps?ll=40.206311,29.022258&z=16&t=m&hl=tr&gl=TR&mapclient=embed&cid=10938989974077462234'" >Google Haritalar</button>
+                                    <button type="button" class="btn btn-primary" onclick="window.open('https://maps.google.com/maps?ll=40.206311,29.022258&z=16&t=m&hl=tr&gl=TR&mapclient=embed&cid=10938989974077462234', '_blank')" >Google Haritalar</button>
                                 </div>
                             </div><!--end col-->
                         </div>
@@ -178,13 +178,12 @@
         }
     </script>
 
-    <div class='sk-ww-google-reviews' data-embed-id='25528820'></div><script src='https://widgets.sociablekit.com/google-reviews/widget.js' defer></script>
+    <script src='https://widgets.sociablekit.com/google-reviews/widget.js'></script>
     <script src="assets/libs/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/app.js"></script>
     <script src="assets/js/pages/gmaps.init.js"></script>
     <script src="assets/libs/gmaps/gmaps.min.js"></script>
     <script src="assets/libs/simplebar/simplebar.min.js"></script>
     <script src="https://maps.google.com/maps/api/js?"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
