--- a/index.html
+++ b/index.html
@@ -179,11 +179,11 @@
     </script>
 
     <script src='https://widgets.sociablekit.com/google-reviews/widget.js'></script>
-    <script src="assets/libs/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/app.js"></script>
     <script src="assets/js/pages/gmaps.init.js"></script>
     <script src="assets/libs/gmaps/gmaps.min.js"></script>
     <script src="assets/libs/simplebar/simplebar.min.js"></script>
-    <script src="https://maps.google.com/maps/api/js?"></script>
+    <script src="https://maps.google.com/maps/api/js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
